--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
                             </div>
                             <div class="col-7 col-md-12">
                                 <p>Itaque tempore nisi eaque esse sint! Animi nostrum exercitationem mollitia, repudiandae dolores illum cumque ducimus rerum error?</p>
+                                <a class="btn btn-primary" href="./nosotros.html">Leer más</a>
                             </div>
                         </div>
 
