--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="./favicon.png" sizes="128x128" />
 </head>
 
-<body class="page page-service">
+<body class="page page-us">
     <header class="header">
 
         <section class="header__top">
@@ -125,27 +125,53 @@
             <div class="container">
                 <div class="page-header">
                     <hgroup class="page--title">
-                        <h3>Servicios locativos</h3>
-                        <h2>Mantenimiento de fachadas</h2>
+                        <h3>Conoce acerca de nosotros</h3>
+                        <h2>ABCServiTodo</h2>
                     </hgroup>
-                    <img class="img-fluid outstanding-image" src="./dist/assets/images/servicio.jpg" alt="Servicio">
+                    <img class="img-fluid outstanding-image" src="./dist/assets/images/nosotros.jpg" alt="Nosotros">
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <p>Debitis recusandae blanditiis minima! Repudiandae officiis, tempore amet voluptates facere consequatur voluptatem magni nam provident magnam ea ipsum rem possimus illum esse?</p>
-                        <p>Maecenas convallis ullamcorper porta. Suspendisse potenti. Curabitur nec odio eget eros feugiat suscipit. Ut et dolor finibus, accumsan dui nec, sagittis ex. Quisque porttitor semper velit, sit amet faucibus justo viverra eu. Proin pellentesque neque non erat fermentum, sed vehicula nisi mattis. Proin ut bibendum turpis. Quisque a eros tempor, commodo nunc tincidunt, rutrum urna. Nam placerat turpis quis mauris interdum pretium.</p>
-                        <h2>Limpieza de vidrios</h2>
-                        <p>Fusce suscipit ipsum nec diam pellentesque, sit amet sagittis magna eleifend. Proin erat ligula, vestibulum eu lorem ut, venenatis mollis nisi. Mauris gravida, massa eget laoreet maximus, risus orci iaculis tellus, nec viverra lacus nisl ut orci. Pellentesque est nisi, commodo at felis non, condimentum sagittis eros. Vestibulum facilisis odio orci, eget venenatis orci imperdiet sit amet. In ornare molestie egestas. Nam aliquet sit amet sem nec efficitur. Pellentesque id tincidunt odio.</p>
+                    <div class="col-12 col-md-6">
+                        <hgroup class="page--sub-title">
+                            <h3>Nuestra</h3>
+                            <h2>Misión</h2>
+                        </hgroup>
+                        <p>Pellentesque est nisi, commodo at felis non, condimentum sagittis eros. Vestibulum facilisis odio orci, eget venenatis orci imperdiet sit amet. In ornare molestie egestas. Nam aliquet sit amet sem nec efficitur. Pellentesque id tincidunt odio.</p>
                         <p>Modi alias exercitationem, cupiditate corrupti, dolor vel eaque consequatur accusamus officiis similique distinctio, nostrum et! Nihil aliquam iure ipsa porro? Labore, consequatur!</p>
-                        <h2>Pintura conjuntos residenciales</h2>
-                        <p>Morbi vitae elit orci. Donec tincidunt rutrum consequat. Aliquam posuere ornare ex, vel sollicitudin metus blandit eget. Suspendisse at augue nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec posuere eros diam, eget vulputate orci suscipit a. Suspendisse maximus ullamcorper mi, ut varius ligula. Curabitur efficitur, leo sed laoreet rhoncus, nibh metus mattis velit, at scelerisque est lacus ut ex. Mauris a viverra ipsum. Ut fermentum, nulla quis molestie faucibus, ex ipsum condimentum urna, ut consectetur nisi elit in nisl.</p>
-                        <p>Etiam blandit erat ut enim tempor pharetra. Aliquam erat volutpat. Praesent cursus ipsum ac nisi finibus, in malesuada lorem finibus. Mauris luctus, nisi eleifend pharetra sagittis, est arcu pretium enim, eleifend pretium justo velit a lectus. Duis lacus leo, semper at viverra non, malesuada vel mauris. Cras accumsan, nisl ut luctus rhoncus, erat augue molestie nulla, vel bibendum nisl mauris vel mi. Morbi sit amet venenatis tortor. Curabitur sodales malesuada tellus, quis viverra nisi varius a. </p>
-                        
-                        <h2>Pintura Fachadas</h2>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img class="img-fluid" src="./dist/assets/images/mision.jpg" alt="Misión">
+                    </div>
+                </div>
+            </div>    
+            <div class="container">
+                <div class="row">                
+                    <div class="col-12 col-md-6">
+                        <hgroup class="page--sub-title">
+                            <h3>Nuestra</h3>
+                            <h2>Visión</h2>
+                        </hgroup>
+                        <p>Suspendisse at augue nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec posuere eros diam, eget vulputate orci suscipit a. Suspendisse maximus ullamcorper mi, ut varius ligula.</p>
+                        <p>Mauris luctus, nisi eleifend pharetra sagittis, est arcu pretium enim, eleifend pretium justo velit a lectus. Duis lacus leo, semper at viverra non, malesuada vel mauris. Cras accumsan, nisl ut luctus rhoncus, erat augue molestie nulla, vel bibendum nisl mauris vel mi. Morbi sit amet venenatis tortor. Curabitur sodales malesuada tellus, quis viverra nisi varius a. </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img class="img-fluid" src="./dist/assets/images/vision.jpg" alt="Visión">
+                    </div>
+                </div>
+            </div>               
+            <div class="container">
+                <div class="row">                 
+                    <div class="col-12 col-md-6">
+                        <hgroup class="page--sub-title">
+                            <h3>Nuestros</h3>
+                            <h2>Objetivos</h2>
+                        </hgroup>
                         <p>Curabitur in viverra lorem. Sed et felis risus. Donec semper at quam sit amet placerat. Praesent nisi libero, pellentesque at pellentesque ut, molestie convallis enim. Proin non imperdiet nibh. Morbi porttitor non tortor fringilla eleifend. Suspendisse potenti. Donec malesuada et ipsum in porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque ullamcorper arcu sed justo consectetur laoreet. Etiam non lectus id sapien commodo consequat.</p>
-                        <p>Fusce at tortor justo. Quisque imperdiet tincidunt fringilla. Quisque scelerisque, nibh at aliquam sodales, sem metus efficitur est, a commodo lorem enim tincidunt ante. Nulla facilisi. Praesent mollis risus at luctus dictum. Maecenas a ullamcorper lorem. Maecenas imperdiet hendrerit euismod. Praesent vitae elit metus. Aliquam erat volutpat. Suspendisse faucibus, odio eget ultricies hendrerit, metus diam interdum est, porttitor lobortis ex turpis sed risus. Donec in neque tempus, accumsan odio sit amet, viverra velit. Maecenas molestie dui velit, vitae porta lorem pellentesque nec. Aliquam vitae ultrices mauris. Nulla vel consequat velit. Praesent id tempor orci.</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img class="img-fluid" src="./dist/assets/images/objetivos.jpg" alt="Objetivos">
                     </div>
                 </div>
             </div>
