[+] Page: Nosotros > Styles: Ajustes (Misión, Visión, Objetivos)

--- a/nosotros.html
+++ b/nosotros.html
@@ -139,7 +139,7 @@
                 <div class="container">
 
                     <div class="row">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 content">
                             <hgroup>
                                 <h3>Nuestra</h3>
                                 <h2>Misión</h2>
@@ -147,7 +147,7 @@
                             <p>Pellentesque est nisi, commodo at felis non, condimentum sagittis eros. Vestibulum facilisis odio orci, eget venenatis orci imperdiet sit amet. In ornare molestie egestas. Nam aliquet sit amet sem nec efficitur. Pellentesque id tincidunt odio.</p>
                             <p>Modi alias exercitationem, cupiditate corrupti, dolor vel eaque consequatur accusamus officiis similique distinctio, nostrum et! Nihil aliquam iure ipsa porro? Labore, consequatur!</p>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 image">
                             <img class="img-fluid" src="./dist/assets/images/mision.jpg" alt="Misión">
                         </div>
                     </div>
@@ -158,7 +158,7 @@
 
                 <div class="container">
                     <div class="row">                
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 content">
                             <hgroup>
                                 <h3>Nuestra</h3>
                                 <h2>Visión</h2>
@@ -166,7 +166,7 @@
                             <p>Suspendisse at augue nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec posuere eros diam, eget vulputate orci suscipit a. Suspendisse maximus ullamcorper mi, ut varius ligula.</p>
                             <p>Mauris luctus, nisi eleifend pharetra sagittis, est arcu pretium enim, eleifend pretium justo velit a lectus. Duis lacus leo, semper at viverra non, malesuada vel mauris. Cras accumsan, nisl ut luctus rhoncus, erat augue molestie nulla, vel bibendum nisl mauris vel mi. Morbi sit amet venenatis tortor. Curabitur sodales malesuada tellus, quis viverra nisi varius a. </p>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 image">
                             <img class="img-fluid" src="./dist/assets/images/vision.jpg" alt="Visión">
                         </div>
                     </div>
@@ -177,14 +177,14 @@
                 
                 <div class="container">
                     <div class="row">                 
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 content">
                             <hgroup>
                                 <h3>Nuestros</h3>
                                 <h2>Objetivos</h2>
                             </hgroup>
                             <p>Curabitur in viverra lorem. Sed et felis risus. Donec semper at quam sit amet placerat. Praesent nisi libero, pellentesque at pellentesque ut, molestie convallis enim. Proin non imperdiet nibh. Morbi porttitor non tortor fringilla eleifend. Suspendisse potenti. Donec malesuada et ipsum in porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque ullamcorper arcu sed justo consectetur laoreet. Etiam non lectus id sapien commodo consequat.</p>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 image">
                             <img class="img-fluid" src="./dist/assets/images/objetivos.jpg" alt="Objetivos">
                         </div>
                     </div>
