[+] Page > Page: Estructura del Theme (Styles)

--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
                                 
                             <div class="card">
                                 <a href="https://abcservitodo.com.co/servicios/mantenimiento-cubiertas-jardineras/">
-                                    <img src="./dist/assets/images/services/instalacion-anti-deslizante-escalera-700x480.jpg" class="--image card-img-top img-fluid mx-auto d-block" alt="Cubiertas y Jardineras">
+                                    <img src="./dist/assets/images/services/instalacion-anti-deslizante-escalera-700x480.jpg" class="card--image card-img-top img-fluid mx-auto d-block" alt="Cubiertas y Jardineras">
                                     <div class="card-body">            
                                         <h5 class="card-title">Cubiertas y Jardineras</h5>
                                     </div>
